tests/baselines/reference/unicodeIdentifierName2.errors.txt
==== tests/cases/compiler/unicodeIdentifierName2.ts (5 errors) ====
    var a₁ = "hello"; alert(a₁)
         
!!! error TS1127: Invalid character.
           ~
!!! error TS1134: Variable declaration expected.
             ~~~~~~~
!!! error TS1134: Variable declaration expected.
                             
!!! error TS1127: Invalid character.
                      ~~~~~
!!! error TS2304: Cannot find name 'alert'.